# rollup-state-manager

./: .env  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  config.yaml
.github/workflows/: cargo-audit.yml  export-circuit-test.yaml  export_circuit.yaml  global-state-test.yaml  global_state.yaml  integration-test.yml  lint.yml  rollup_state_manager.yaml  unit-test.yml  unit_test.yml
config/: default.yaml  development.yaml  staging.yaml
docker/: docker-compose-ci.yaml  docker-compose.yaml  envoy.yaml
examples/js/: .env.advise  .eslintrc.json  get_l2_block_by_id.ts  get_token_balance.ts  grpc_client.ts  grpc_user_info.ts  kafka_producer.ts  package-lock.json  package.json  print_latest_l2_blocks.ts  rest_client.ts  rest_get_l2_blocks.ts  rest_get_token_balance.ts
migrations/: 20210626034404_l2block.sql
proto/: rollup_state.pb  rollup_state.proto
scripts/: global_state_test.sh  install_deps.sh  test_export_circuit.sh  test_global_state.sh
src/: account.rs  const.rs  db.rs  lib.rs  params.rs
src/circuit_test/: binary_merkle_tree.rs  messages.rs  mod.rs  types.rs
src/config/: mod.rs
src/grpc/: controller.rs  handler.rs  mod.rs  user_cache.rs
src/grpc/rpc/: mod.rs  rollup_state.rs
src/message/: mod.rs  persist.rs
src/msg/: mod.rs  msg_loader.rs  msg_processor.rs  msg_utils.rs
src/persist/: history.rs  mod.rs  persistor.rs
src/state/: account.rs  block.rs  common.rs  global.rs  global_state.rs  manager_wrapper.rs  merkle_tree.rs  messages.rs  mod.rs  pub_data.rs  types.rs  witness_generator.rs
src/state/codec/: mod.rs  place_order_tx_data.rs
src/state/global/: export_circuit.rs  msg_loader.rs  msg_processor.rs  types.rs
src/storage/: database.rs  models.rs
src/test_utils/: circuit.rs  circuit_file.rs  messages.rs  mod.rs  params.rs  types.rs
src/tests/: params.rs
src/types/: fixnum.rs  math.rs  merkle_tree.rs  messages.rs  mod.rs  primitives.rs
src/types/l2/: block.rs  mod.rs  mod_tx_data.rs  order.rs  serialize.rs  tx.rs  tx_data.rs  tx_encode.rs
src/types/l2/codec/: place_order_tx_data.rs
src/types/matchengine/: messages.rs
tests/: test_export_circuit.rs  test_global_state.rs
tests/circuit_tests/: export_testcases.rs  test.sh  test_l2_block.rs  test_merkletree.rs
tests/export_circuit/: gen_testcase.rs  test.sh
tests/global_state/: bench.rs  bench_test.sh  export_circuit.rs  gen_testcase.rs  main.rs  main_loop.rs  msg_consumer.rs  msg_loader.rs  msg_preprocessor.rs  msg_processor.rs  test.sh  types.rs
tests/global_state/testdata/: data.txt  data001.txt  data002.txt  data003.txt
tests/rollup_state_manager/: test.sh
