[package]
name = "rollup_state_manager"
version = "0.1.0"
authors = [ "HAOYUatHZ <haoyu@protonmail.com>" ]
edition = "2018"

[dependencies]
anyhow = "1.0.39"
arrayref = "0.3.6"
coins-bip32 = "0.2.2"
babyjubjub-rs = { version = "0.0.8", features = [ "aarch64" ], default-features = false }
config_rs = { package = "config", version = "0.10.1" }
dotenv = "0.15.0"
env_logger = "0.5"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ff = { package = "ff_ce", version = "0.11", features = [ "derive" ] }
fnv = "1.0.7"
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "beta" }
hex = "0.4.3"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4"
num = "0.4.0"
# don't upgrade bigint until you know what you are doing. bigint of all deps should have same version 
num-bigint = { version = "0.2.2", features = [ "rand" ] }
num-traits = "0.2.14"
poseidon-rs = { version = "0.0.8" }
pprof = { version = "0.4", features = ["flamegraph", "protobuf"] }
rand = "0.8.3"
rayon = "1.5.0"
regex = "1"
rust_decimal = { version = "1.10.3", features = [ "serde_json" ] }
serde = { version = "1.0.124", features = [ "derive" ] }
serde_derive = "1.0.90"
serde_json = "1.0.64"
sha2 = "0.9.5"
crossbeam-channel = "0.5.1"
sled = { version = "0.34", optional = true }
bincode = { version = "1.3.3", optional = true }

[[bin]]
name = "rollup_state_manager"
path = "src/bin/main.rs"

[[bin]]
name = "dump_sled"
path = "src/bin/dump_sled.rs"
required-features = [ "persist_sled" ]

[[bin]]
name = "gen_export_circuit_testcase"
path = "tests/export_circuit/gen_testcase.rs"

[[bin]]
name = "gen_global_state_testcase"
path = "tests/global_state/gen_testcase.rs"

[[bin]]
name = "bench_global_state"
path = "tests/global_state/bench.rs"

[features]
default = [ ]
bench_global_state = [ ]
persist_sled = [ "sled", "bincode" ]
