[package]
name = "rollup_state_manager"
version = "0.1.0"
authors = [ "HAOYUatHZ <haoyu@protonmail.com>" ]
edition = "2018"

[dependencies]
anyhow = "1.0.39"
arrayref = "0.3.6"
babyjubjub-rs = { git = "https://github.com/Fluidex/babyjubjub-rs" }
bincode = { version = "1.3.3", optional = true }
cfg-if = "1.0.0"
coins-bip32 = "0.2.2"
config_rs = { package = "config", version = "0.10.1" }
crossbeam-channel = "0.5.1"
dotenv = "0.15.0"
env_logger = "0.5"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ff = { git = "https://github.com/Fluidex/ff", package = "ff_ce", features = [ "derive" ] }
fnv = "1.0.7"
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/Fluidex/franklin-crypto.git" }
futures = "0.3.13"
hex = "0.4.3"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4"
num = "0.4.0"
# don't upgrade bigint until you know what you are doing. bigint of all deps should have same version 
num-bigint = { version = "0.4", features = [ "rand" ] }
num-traits = "0.2"
poseidon-rs = { git = "https://github.com/Fluidex/poseidon-rs" }
pprof = { version = "0.4", features = [ "flamegraph", "protobuf" ] }
rand = "0.8.3"
rayon = "1.5.0"
rdkafka = { version = "0.25.0", features = [ "cmake-build" ] }
regex = "1"
rust_decimal = { version = "1.14", features = [ "maths", "serde_json" ] }
serde = { version = "1.0.124", features = [ "derive" ] }
serde-big-array = "0.3.2"
serde_derive = "1.0.90"
serde_json = "1.0.64"
sha2 = "0.9.5"
sled = { version = "0.34", optional = true }
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "postgres", "chrono", "decimal", "json" ] }
thiserror = "1.0.25"
tokio = { version = "1.6.0", features = [ "full" ] }

[[bin]]
name = "rollup_state_manager"
path = "src/bin/main.rs"

[[bin]]
name = "dump_sled"
path = "src/bin/dump_sled.rs"
required-features = [ "persist_sled" ]

[[bin]]
name = "gen_export_circuit_testcase"
path = "tests/circuit_tests/export_testcases.rs"

[[bin]]
name = "gen_global_state_testcase"
path = "tests/global_state/gen_testcase.rs"

[[bin]]
name = "bench_global_state"
path = "tests/global_state/bench.rs"

[features]
bench_global_state = [ ]
default = ["persist_sled"]
windows_build = [ "rdkafka/dynamic_linking" ]
fr_string_repr = [ ]
persist_sled = [ "sled", "bincode" ]
