[package]
name = "rollup_state_manager"
version = "0.1.0"
authors = [ "HAOYUatHZ <haoyu@protonmail.com>" ]
edition = "2021"

[dependencies]
anyhow = "1.0.39"
arrayref = "0.3.6"
bincode = { version = "1.3.3", optional = true }
cfg-if = "1.0.0"
coins-bip32 = "0.3"
config_rs = { package = "config", version = "0.10.1" }
crossbeam-channel = "0.5.1"
dotenv = "0.15.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
fluidex-common = { git = "https://github.com/fluidex/common-rs", branch = "call-rescale-for-amount-type-format", features = [ "kafka", "l2-account", "non-blocking-tracing", "rollup-state-db" ] }
futures = "0.3.13"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4"
num = "0.4.0"
once_cell = "1.8.0"
orchestra = { git = "https://github.com/fluidex/orchestra.git", branch = "master", features = [ "rollup" ] }
rand = "0.8.3"
rayon = "1.5.0"
regex = "1"
serde = { version = "1.0.124", features = [ "derive" ] }
serde_derive = "1.0.90"
serde_json = "1.0.64"
sha2 = "0.9.5"
sled = { version = "0.34", optional = true }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "decimal" ] }
thiserror = "1.0.25"
tokio = { version = "1.6.0", features = [ "full" ] }
tonic = "0.5.2"

[dev-dependencies]
pprof = { version = "0.4", features = [ "flamegraph", "protobuf" ] }

[[bin]]
name = "rollup_state_manager"
path = "src/bin/main.rs"

[[bin]]
name = "dump_sled"
path = "src/bin/dump_sled.rs"
required-features = [ "persist_sled" ]

[[bin]]
name = "gen_export_circuit_testcase"
path = "tests/circuit_tests/export_testcases.rs"

[[bin]]
name = "gen_global_state_testcase"
path = "tests/global_state/gen_testcase.rs"

[[bin]]
name = "bench_global_state"
path = "tests/global_state/bench.rs"

[features]
bench_global_state = [ ]
default = ["persist_sled"]
windows_build = [ "fluidex-common/rdkafka-dynamic" ]
fr_string_repr = [ ]
persist_sled = [ "sled", "bincode" ]

[profile.release]
debug-assertions = true
